kclvm/parser/src/tests/snapshots/kclvm_parser__tests__error_recovery__assign_stmt_recovery_6.snap
---
source: parser/src/tests/error_recovery.rs
expression: "crate::tests::parsing_module_string(r#\"a() = b. = c\"#)"
---
Module {
    filename: "",
    pkg: "",
    doc: None,
    name: "",
    body: [
        Node {
            node: Assign(
                AssignStmt {
                    targets: [
                        Node {
                            node: Identifier {
                                names: [],
                                pkgpath: "",
                                ctx: Load,
                            },
                            filename: "",
                            line: 1,
                            column: 0,
                            end_line: 1,
                            end_column: 3,
                        },
                        Node {
                            node: Identifier {
                                names: [
                                    Node {
                                        node: "b",
                                        filename: "",
                                        line: 1,
                                        column: 6,
                                        end_line: 1,
                                        end_column: 7,
                                    },
                                    Node {
                                        node: "",
                                        filename: "",
                                        line: 1,
                                        column: 9,
                                        end_line: 1,
                                        end_column: 9,
                                    },
                                ],
                                pkgpath: "",
                                ctx: Store,
                            },
                            filename: "",
                            line: 1,
                            column: 6,
                            end_line: 1,
                            end_column: 8,
                        },
                    ],
                    value: Node {
                        node: Identifier(
                            Identifier {
                                names: [
                                    Node {
                                        node: "c",
                                        filename: "",
                                        line: 1,
                                        column: 11,
                                        end_line: 1,
                                        end_column: 12,
                                    },
                                ],
                                pkgpath: "",
                                ctx: Load,
                            },
                        ),
                        filename: "",
                        line: 1,
                        column: 11,
                        end_line: 1,
                        end_column: 12,
                    },
                    type_annotation: None,
                    ty: None,
                },
            ),
            filename: "",
            line: 1,
            column: 0,
            end_line: 1,
            end_column: 12,
        },
    ],
    comments: [],
}

