kclvm/parser/src/tests/snapshots/kclvm_parser__tests__error_recovery__call_recovery_0.snap
---
source: parser/src/tests/error_recovery.rs
assertion_line: 112
expression: "crate::tests::parsing_expr_string(r#\"a(\"#)"
---
Node {
    node: Call(
        CallExpr {
            func: Node {
                node: Identifier(
                    Identifier {
                        names: [
                            "a",
                        ],
                        pkgpath: "",
                        ctx: Load,
                    },
                ),
                filename: "",
                line: 1,
                column: 0,
                end_line: 1,
                end_column: 1,
            },
            args: [
                Node {
                    node: Missing(
                        MissingExpr,
                    ),
                    filename: "",
                    line: 1,
                    column: 1,
                    end_line: 1,
                    end_column: 2,
                },
            ],
            keywords: [],
        },
    ),
    filename: "",
    line: 1,
    column: 0,
    end_line: 1,
    end_column: 2,
}

